--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.animate-in {
+  opacity: 1 !important;
+  transform: translate3d(0, 0, 0) !important;
+}
